<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewChiTietActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/Full_Name"
            android:textStyle="bold"
            android:id="@+id/tvNameDetail"
            android:textSize="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ID"

            android:layout_weight="0.4"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="test"
            android:id="@+id/tvIDDetail"
            android:textAlignment="textStart"
            android:layout_weight="0.6"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Class"
            android:layout_weight="0.4"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="test"
            android:id="@+id/tvClassDetail"
            android:textAlignment="textStart"
            android:layout_weight="0.6"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Email"

            android:layout_weight="0.4"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="test"
            android:id="@+id/tvEmailDetail"
            android:textAlignment="textStart"
            android:layout_weight="0.6"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/DOB"

            android:layout_weight="0.4"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="23/05/2001"
            android:id="@+id/tvDOBDetail"
            android:textAlignment="textStart"
            android:layout_weight="0.6"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"

            android:layout_weight="0.4"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="test"
            android:id="@+id/tvGenderDetail"
            android:textAlignment="textStart"
            android:layout_weight="0.6"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/btnCreateDetail"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEditDetail"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/btnBack"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>



</LinearLayout>